--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 /**
- * Based on layout from https://adventofcode.com/ 
+ * Based on layout from https://adventofcode.com/
  * Full credit to Eric Wastl
  */
 
@@ -167,4 +167,15 @@ label {
 
 .sponsor {
   margin: 1em 0;
+}
+
+#spacevideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: 100%;
+  z-index: -1;
+  opacity: .45;
 }
